--- a/Ux_page.html
+++ b/Ux_page.html
@@ -37,6 +37,7 @@
                         <ul style="color: #128360">
                         <li> Projeto <b> UX / UI </b> </li>
                         <li> Branding </li>
+                        <li> lero lero </li>
                         </ul>
               
                 </div>
