--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
         height: 100vh;
         
        background: rgb(0,0,0); 
-        background: linear-gradient(180deg, rgba(0,0,0, 50%) 55%, rgba(30,32,34,50%) 91%), url(Imagens/fotofooter3.jpg);
+        background: linear-gradient(180deg, rgba(0,0,0, 50%) 55%, rgba(30,32,34,50%) 91%), url(Imagens/fotofooter.jpg);
         background-repeat: no-repeat;
         background-position: top right;
         background-size: cover;
