--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Responsivo</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Index_style.css">
     <script src="https://kit.fontawesome.com/804d37bdbe.js" crossorigin="anonymous"></script>
  
