--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
            
            <article class="second-article clearfix" id="uxdesign">
                
-               <h1> branding </h1>
+               <h1> brand </h1>
                <h2> id visual </h2>
                <h3> logotipos </h3>
                <h4> branding </h4>
