--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <span class="linha1">.</span>
 
-        <a class="stickhome" href="#top"> <img src="Imagens/Up_icon.png"> </a>
+        <a class="stickhome" href="#top"> <img id="stickhome_img" src="Imagens/Up_icon.png"> </a>
 
 
         <article class="first-article clearfix" id="branding">
