--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body>
-    <div id="menu"></div>
+    <!-- <div id="menu"></div> --->
 
     <header id="top">
 
@@ -37,8 +37,8 @@
 
             <ul>
 
-                <li><a href="#branding"> ux design </a></li>
-                <li><a href="#uxdesign"> branding </a></li>
+                <li><a href="#uxdesign"> ux design </a></li>
+                <li><a href="#branding"> branding </a></li>
                 <li><a href="#pressmedia"> press media </a></li>
                 <li><a href="#digital"> digital </a></li>
                 <li><a href="#others"> others </a></li>
@@ -58,7 +58,7 @@
         <a class="stickhome" href="#top"> <img id="stickhome_img" src="Imagens/Up_icon.png"> </a>
 
 
-        <article class="first-article clearfix" id="branding">
+        <article class="first-article clearfix" id="uxdesign">
 
             <h1> design </h1>
             <h2> lean ux </h2>
@@ -89,7 +89,7 @@
 
 
 
-        <article class="second-article clearfix" id="uxdesign">
+        <article class="second-article clearfix" id="branding">
 
             <h1> brand </h1>
             <h2> id visual </h2>
