--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
 
             <div class="icons-container">
 
-                <a href="http://google.com"><i class="fab fa-github"></i></a>
-                <a href="http://google.com"><i class="fab fa-twitter"></i></a>
-                <a href="http://google.com"><i class="fab fa-linkedin-in"></i></a>
-                <a href="http://google.com"><i class="fab fa-instagram"></i></a>
+                <a target="blank" href="http://google.com"><i class="fab fa-github"></i></a>
+                <a target="blank" href="http://google.com"><i class="fab fa-twitter"></i></a>
+                <a target="blank" href="http://google.com"><i class="fab fa-linkedin-in"></i></a>
+                <a target="blank" href="http://google.com"><i class="fab fa-instagram"></i></a>
 
             </div>
 
