--- a/Branding_page.html
+++ b/Branding_page.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="branding_style.css">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,6 +20,8 @@
        <div class="desc"> 
          <h2>Gonzalito</h2>
          <h3> Cozinha Mexicana</h3>
+
+         <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
        </div>
         
 <div class="responsive">
@@ -57,11 +58,6 @@
   </div>
 </div>
 
-<div class="text"> 
-  <p>  sdadsadasdasdasdsdadsadasdasdasdsdadsadasdasdasdsdadsadasdasdasdsdadsadasdasdasdsdadsadasdasdasdsdadsadasdasdasdsdadsadasdasdasdsdadsadasdasdasdsdadsadasdasdasd</p>
-</div>
-
-        
 </main>
 
 </body>
