--- a/Branding_page.html
+++ b/Branding_page.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="branding_style.css">
 
+  <link rel="stylesheet" href="branding_style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -23,42 +24,23 @@
 
          <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
        </div>
-        
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_5terre.jpg">
-      <img src="Imagens/Post6.jpg" alt="Cinque Terre" width="600" height="400">
-    </a>
-    
-  </div>
-</div>
-
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_forest.jpg">
-      <img src="Imagens/Post3.jpg" alt="Forest" width="600" height="400">
-    </a>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_lights.jpg">
-      <img src="Imagens/Post4.jpg" alt="Northern Lights" width="600" height="400">
-    </a>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="Imagens/Post5.jpg" alt="Mountains" width="600" height="400">
-    </a>
-  </div>
-</div>
 
 </main>
 
+<div class="container">
+
+     <div class="col1"> 
+      <img src="imagens/Post3.jpg"> 
+      <img src="imagens/Post4.jpg">  
+     </div> 
+
+    <div class="col2"> 
+      <img src="imagens/Post5.jpg">  
+      <img src="imagens/Post6.jpg">   
+    </div>
+
+</div>
+
 </body>
+
 </html>
