--- a/Branding_page.html
+++ b/Branding_page.html
@@ -30,13 +30,13 @@
 <div class="container">
 
      <div class="col1"> 
-      <img src="imagens/Post3.jpg"> 
-      <img src="imagens/Post4.jpg">  
+      <img src="imagens/post1.jpg"> 
+      <img src="imagens/post2.jpg">  
      </div> 
 
     <div class="col2"> 
-      <img src="imagens/Post5.jpg">  
-      <img src="imagens/Post6.jpg">   
+      <img src="imagens/post3.jpg">  
+      <img src="imagens/post4.jpg">   
     </div>
 
 </div>
