--- a/Branding_page.html
+++ b/Branding_page.html
@@ -30,13 +30,13 @@
 <div class="container">
 
      <div class="col1"> 
-      <img src="imagens/bioma/bioma1.jpg"> 
-      <img src="imagens/bioma/bioma2.jpg">  
+      <img src="Imagens/bioma/bioma1.jpg"> 
+      <img src="Imagens/bioma/bioma2.jpg">  
      </div> 
 
     <div class="col2"> 
-      <img src="imagens/bioma/bioma3.jpg">  
-      <img src="imagens/bioma/bioma4.jpg">   
+      <img src="Imagens/bioma/bioma3.jpg">  
+      <img src="Imagens/bioma/bioma4.jpg">   
     </div>
 
 </div>
