--- a/Branding_page.html
+++ b/Branding_page.html
@@ -30,14 +30,39 @@
 <div class="container">
 
      <div class="col1"> 
-      <img src="Imagens/bioma/bioma1.jpg"> 
-      <img src="Imagens/bioma/bioma2.jpg">  
+      <img src="Imagens/post1.jpg"> 
+      <img src="Imagens/post2.jpg">  
      </div> 
 
     <div class="col2"> 
-      <img src="Imagens/bioma/bioma3.jpg">  
-      <img src="Imagens/bioma/bioma4.jpg">   
+      <img src="Imagens/post3.jpg">  
+      <img src="Imagens/post4.jpg">   
     </div>
+
+</div>
+
+<main> 
+
+  <div class="desc"> 
+    <h2>Gonzalito</h2>
+    <h3> Cozinha Mexicana</h3>
+
+    <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+  </div>
+
+</main>
+
+<div class="container">
+
+<div class="col1"> 
+ <img src="Imagens/bioma/bioma1.jpg"> 
+ <img src="Imagens/bioma/bioma2.jpg">  
+</div> 
+
+<div class="col2"> 
+ <img src="Imagens/bioma/bioma3.jpg">  
+ <img src="Imagens/bioma/bioma4.jpg">   
+</div>
 
 </div>
 
