--- a/Branding_page.html
+++ b/Branding_page.html
@@ -30,13 +30,13 @@
 <div class="container">
 
      <div class="col1"> 
-      <img src="Imagens/post1.jpg"> 
-      <img src="Imagens/post2.jpg">  
+      <img src="Imagens/quadrado.svg"> 
+      <img src="Imagens/quadrado.svg">  
      </div> 
 
     <div class="col2"> 
-      <img src="Imagens/post3.jpg">  
-      <img src="Imagens/post4.jpg">   
+      <img src="Imagens/quadrado.svg">  
+      <img src="Imagens/quadrado.svg">   
     </div>
 
 </div>
@@ -55,13 +55,13 @@
 <div class="container">
 
 <div class="col1"> 
- <img src="Imagens/bioma/bioma1.jpg"> 
- <img src="Imagens/bioma/bioma2.jpg">  
+ <img src="Imagens/quadrado.svg"> 
+ <img src="Imagens/quadrado.svg">  
 </div> 
 
 <div class="col2"> 
- <img src="Imagens/bioma/bioma3.jpg">  
- <img src="Imagens/bioma/bioma4.jpg">   
+ <img src="Imagens/quadrado.svg">  
+ <img src="Imagens/quadrado.svg">   
 </div>
 
 </div>
