--- a/Branding_page.html
+++ b/Branding_page.html
@@ -30,13 +30,13 @@
 <div class="container">
 
      <div class="col1"> 
-      <img src="Imagens/quadrado.svg"> 
-      <img src="Imagens/quadrado.svg">  
+      <img src="Imagens/quadrado.jpg"> 
+      <img src="Imagens/quadrado.jpg">  
      </div> 
 
     <div class="col2"> 
-      <img src="Imagens/quadrado.svg">  
-      <img src="Imagens/quadrado.svg">   
+      <img src="Imagens/quadrado.jpg">  
+      <img src="Imagens/quadrado.jpg">   
     </div>
 
 </div>
@@ -55,13 +55,13 @@
 <div class="container">
 
 <div class="col1"> 
- <img src="Imagens/quadrado.svg"> 
- <img src="Imagens/quadrado.svg">  
+ <img src="Imagens/quadrado.jpg"> 
+ <img src="Imagens/quadrado.jpg">  
 </div> 
 
 <div class="col2"> 
- <img src="Imagens/quadrado.svg">  
- <img src="Imagens/quadrado.svg">   
+ <img src="Imagens/quadrado.jpg">  
+ <img src="Imagens/quadrado.jpg">   
 </div>
 
 </div>
