--- a/Branding_page.html
+++ b/Branding_page.html
@@ -30,13 +30,13 @@
 <div class="container">
 
      <div class="col1"> 
-      <img src="Imagens/quadrado.jpg"> 
-      <img src="Imagens/quadrado.jpg">  
+      <img src="imagens/branding/gonza1.jpg"> 
+      <img src="imagens/branding/gonza2.jpg">  
      </div> 
 
     <div class="col2"> 
-      <img src="Imagens/quadrado.jpg">  
-      <img src="Imagens/quadrado.jpg">   
+      <img src="imagens/branding/gonza3.jpg">  
+      <img src="imagens/branding/gonza4.jpg">   
     </div>
 
 </div>
@@ -55,13 +55,13 @@
 <div class="container">
 
 <div class="col1"> 
- <img src="Imagens/quadrado.jpg"> 
- <img src="Imagens/quadrado.jpg">  
+ <img src="imagens/branding/bioma1.jpg"> 
+ <img src="imagens/branding/bioma2.jpg">  
 </div> 
 
 <div class="col2"> 
- <img src="Imagens/quadrado.jpg">  
- <img src="Imagens/quadrado.jpg">   
+ <img src="imagens/branding/bioma3.jpg">  
+ <img src="imagens/branding/bioma4.jpg">   
 </div>
 
 </div>
