--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
 
 
             <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
-                projeto
-                <b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
-                processo
-                de ensino de línguas e UX.
+                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
+                processo de ensino de línguas e UX.
             </p>
 
             <button class="button type1"> <a href="Ux_page.html"> Ver Mais </a></button>
@@ -105,9 +103,10 @@
             </div>
 
 
-            <p> t is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
+                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
+                processo de ensino de línguas e UX.
+            </p>
 
             <button class="button type1"> <a href="Branding_page.html"> Ver Mais </a> </button>
 
@@ -130,9 +129,10 @@
             </div>
 
 
-            <p> t is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
+                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
+                processo de ensino de línguas e UX.
+            </p>
 
             <button class="button type1"> Ver Mais </button>
 
@@ -156,9 +156,10 @@
             </div>
 
 
-            <p> t is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
+                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
+                processo de ensino de línguas e UX.
+            </p>
 
             <button class="button type1"> Ver Mais </button>
 
@@ -181,9 +182,10 @@
             </div>
 
 
-            <p> t is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
+                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
+                processo de ensino de línguas e UX.
+            </p>
 
             <button class="button type1"> Ver Mais </button>
 
