--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
             <div class="quadrado-imagem">
 
-                <img src="Imagens/Got%20it.svg">
+                <img src="Imagens/Desenhos/header01.svg">
 
             </div>
 
