--- a/Branding_page.html
+++ b/Branding_page.html
@@ -16,7 +16,7 @@
     <ul>
       <li> <a href="index.html"> Branding </a> </li> 
       <li> <a href="index.html"> Press  </a> </li>
-      <li> <a href="index.html"> <img src="Imagens/Logo_simbolo.svg"> </a> </li>
+      <li> <a class="logocima" href="index.html"> <img src="Imagens/Logo_simbolo.svg"> </a> </li>
       <li> <a href="index.html"> Digital  </a> </li>
       <li> <a href="index.html"> Other </a> </li>
     </ul>
