--- a/Branding_page.html
+++ b/Branding_page.html
@@ -20,6 +20,15 @@
       <li> <a href="index.html"> Digital  </a> </li>
       <li> <a href="index.html"> Other </a> </li>
     </ul>
+
+
+    <a target="none" href="#">
+    <div class="hamburger">
+      <div class="ham"></div>
+      <div class="ham"></div>
+      <div class="ham"></div>
+    </div>
+    </a>
     
 </header>
     
