--- a/Branding_page.html
+++ b/Branding_page.html
@@ -21,17 +21,20 @@
       <li> <a href="index.html"> Other </a> </li>
     </ul>
 
+   <input id="menu-hamburger" type="checkbox"> 
 
-    <a target="none" href="#">
+    <label for="menu-hamburger"> 
+   
     <div class="hamburger">
-      <div class="ham"></div>
-      <div class="ham"></div>
-      <div class="ham"></div>
+      <div class="ham ham1"></div>
+      <div class="ham ham2"></div>
+      <div class="ham ham3"></div>
     </div>
-    </a>
-    
+
+  </label>
+
 </header>
-    
+
     <main> 
 
        <div class="desc"> 
