--- a/Branding_page.html
+++ b/Branding_page.html
@@ -31,7 +31,16 @@
       <div class="ham ham3"></div>
     </div>
 
+    <ul class="respmenu">
+      <li><a href="index.html"> Branding </a></li>
+      <li><a href="index.html"> Branding </a></li>
+      <li><a href="index.html"> Branding </a></li>
+      <li><a href="index.html"> Branding </a></li>>
+    </ul>
+
   </label>
+
+  
 
 </header>
 
