--- a/Branding_page.html
+++ b/Branding_page.html
@@ -35,7 +35,7 @@
       <li><a href="index.html"> Branding </a></li>
       <li><a href="index.html"> Branding </a></li>
       <li><a href="index.html"> Branding </a></li>
-      <li><a href="index.html"> Branding </a></li>>
+      <li><a href="index.html"> Branding </a></li>
     </ul>
 
   </label>
