--- a/Branding_page.html
+++ b/Branding_page.html
@@ -31,6 +31,8 @@
       <div class="ham ham3"></div>
     </div>
 
+    <a href="index.html"> <img class="mobilelogo" src="Imagens/Logo_simbolo.svg"> </a>
+
     <ul class="respmenu">
       <li><a href="index.html"> Branding </a></li>
       <li><a href="index.html"> Branding </a></li>
