--- a/Ux_page.html
+++ b/Ux_page.html
@@ -23,6 +23,25 @@
               <li> <a href="index.html"> Digital  </a> </li>
               <li> <a href="index.html"> Other </a> </li>
             </ul>
+
+            <input id="menu-hamburger" type="checkbox"> 
+
+             <label for="menu-hamburger"> 
+   
+            <div class="hamburger">
+              <div class="ham ham1"></div>
+              <div class="ham ham2"></div>
+              <div class="ham ham3"></div>
+            </div>
+
+          <a href="index.html"> <img class="mobilelogo" src="Imagens/Logo_simbolo.svg"> </a>
+
+          <ul class="respmenu">
+            <li><a href="index.html"> Branding </a></li>
+            <li><a href="index.html"> Branding </a></li>
+            <li><a href="index.html"> Branding </a></li>
+            <li><a href="index.html"> Branding </a></li>
+           </ul>
             
         </header>
             
