--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <article class="first-article clearfix" id="uxdesign">
 
             <h1> design </h1>
-            <h2> lean ux </h2>
+            <h2> Thinking </h2>
             <h3> ui </h3>
             <h4> UX </h4>
 
@@ -92,7 +92,7 @@
 
             <h1> brand </h1>
             <h2> id visual </h2>
-            <h3> logotipos </h3>
+            <h3> logo </h3>
             <h4> branding </h4>
 
 
