--- a/Branding_page.html
+++ b/Branding_page.html
@@ -60,13 +60,13 @@
 <div class="container">
 
      <div class="col1"> 
-      <img src="imagens/branding/gonza1.jpg"> 
-      <img src="imagens/branding/gonza2.jpg">  
+      <img src="imagens/branding/gonza01.jpg"> 
+      <img src="imagens/branding/gonza02.jpg">  
      </div> 
 
     <div class="col2"> 
-      <img src="imagens/branding/gonza3.jpg">  
-      <img src="imagens/branding/gonza4.jpg">   
+      <img src="imagens/branding/gonza03.jpg">  
+      <img src="imagens/branding/gonza04.jpg">   
     </div>
 
 </div>
@@ -85,13 +85,13 @@
 <div class="container">
 
 <div class="col1"> 
- <img src="imagens/branding/bioma1.jpg"> 
- <img src="imagens/branding/bioma2.jpg">  
+ <img src="imagens/branding/bioma01.jpg"> 
+ <img src="imagens/branding/bioma02.jpg">  
 </div> 
 
 <div class="col2"> 
- <img src="imagens/branding/bioma3.jpg">  
- <img src="imagens/branding/bioma4.jpg">   
+ <img src="imagens/branding/bioma03.jpg">  
+ <img src="imagens/branding/bioma04.jpg">   
 </div>
 
 </div>
