--- a/Branding_page.html
+++ b/Branding_page.html
@@ -61,11 +61,11 @@
 
      <div class="col1"> 
       <img src="imagens/branding/gonza01.jpg"> 
-      <img src="imagens/branding/gonza02.jpg">  
+      <img src="imagens/branding/gonza03.jpg">  
      </div> 
 
     <div class="col2"> 
-      <img src="imagens/branding/gonza03.jpg">  
+      <img src="imagens/branding/gonza02.jpg">  
       <img src="imagens/branding/gonza04.jpg">   
     </div>
 
@@ -74,8 +74,8 @@
 <main> 
 
   <div class="desc"> 
-    <h2>Gonzalito</h2>
-    <h3> Cozinha Mexicana</h3>
+    <h2>Bioma</h2>
+    <h3>Consultoria Ambiental</h3>
 
     <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
   </div>
@@ -86,11 +86,11 @@
 
 <div class="col1"> 
  <img src="imagens/branding/bioma01.jpg"> 
- <img src="imagens/branding/bioma02.jpg">  
+ <img src="imagens/branding/bioma03.jpg">  
 </div> 
 
 <div class="col2"> 
- <img src="imagens/branding/bioma03.jpg">  
+ <img src="imagens/branding/bioma02.jpg">  
  <img src="imagens/branding/bioma04.jpg">   
 </div>
 
