--- a/Branding_page.html
+++ b/Branding_page.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="branding_style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/804d37bdbe.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -270,6 +271,19 @@
               </div>
               
               </div>
+
+              <footer>
+
+                <div class="icons-container">
+
+                  <a target="blank" href="http://google.com"><i class="fab fa-github"></i></a>
+                  <a target="blank" href="http://google.com"><i class="fab fa-twitter"></i></a>
+                  <a target="blank" href="http://google.com"><i class="fab fa-linkedin-in"></i></a>
+                  <a target="blank" href="http://google.com"><i class="fab fa-instagram"></i></a>
+  
+              </div>
+
+              </footer>
 
 
 </body>
