--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
                 <li><a href="#uxdesign"> ux design </a></li>
                 <li><a href="#branding"> branding </a></li>
-                <li><a href="#pressmedia"> press media </a></li>
+                <li><a href="#print"> print </a></li>
                 <li><a href="#digital"> digital </a></li>
-                <li><a href="#others"> others </a></li>
+                <li><a href="#study"> study </a></li>
 
 
             </ul>
@@ -114,7 +114,7 @@
 
 
 
-        <article class="first-article clearfix" id="pressmedia">
+        <article class="first-article clearfix" id="print">
 
             <h1> press </h1>
             <h2> packages </h2>
@@ -134,7 +134,7 @@
                 processo de ensino de línguas e UX.
             </p>
 
-            <button class="button type1"> Ver Mais </button>
+            <button class="button type1"> <a href="press_page.html"> Ver Mais</a></button>
 
         </article>
 
@@ -161,15 +161,15 @@
                 processo de ensino de línguas e UX.
             </p>
 
-            <button class="button type1"> Ver Mais </button>
+            <button class="button type1"><a href="digital_page.html">Ver Mais</a></button>
 
         </article>
 
 
 
-        <article class="first-article clearfix" id="others">
+        <article class="first-article clearfix" id="study">
 
-            <h1> Other </h1>
+            <h1> study </h1>
             <h2> illustration </h2>
             <h3> typography </h3>
             <h4> design </h4>
@@ -187,11 +187,12 @@
                 processo de ensino de línguas e UX.
             </p>
 
-            <button class="button type1"> Ver Mais </button>
+            <button class="button type1"> <a href="study_page.html">Ver Mais</a></button>
 
         </article>
 
     </main>
+
     <footer id="footer">
 
 
