--- a/digital_page.html
+++ b/digital_page.html
@@ -45,8 +45,8 @@
     <main> 
 
         <div class="desc"> 
-          <h2>Papillon</h2>
-          <h3>Livro</h3>
+          <h2>Livro</h2>
+          <h3>Distopia Verídica</h3>
  
           <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
         </div>
@@ -56,16 +56,92 @@
  <div class="container">
  
       <div class="col1"> 
-       <img src="imagens/branding/gonza01.jpg"> 
-       <img src="imagens/branding/gonza03.jpg">  
+       <img src="imagens/digital/dist01.jpg"> 
+       <img src="imagens/digital/dist02.jpg">  
       </div> 
  
      <div class="col2"> 
-       <img src="imagens/branding/gonza02.jpg">  
-       <img src="imagens/branding/gonza04.jpg">   
+       <img src="imagens/digital/dist03.jpg">  
+       <img src="imagens/digital/dist04.jpg">   
      </div>
  
  </div>
+
+ <main> 
+
+    <div class="desc"> 
+      <h2>Papillon</h2>
+      <h3>Consulting</h3>
+
+      <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+    </div>
+
+ </main>
+
+<div class="container">
+
+  <div class="col1"> 
+   <img src="imagens/digital/pap01.jpg"> 
+   <img src="imagens/digital/pap02.jpg">  
+  </div> 
+
+ <div class="col2"> 
+   <img src="imagens/digital/pap03.jpg">  
+   <img src="imagens/digital/pap04.jpg">   
+ </div>
+
+</div>
+
+<main> 
+
+    <div class="desc"> 
+      <h2>Amorim</h2>
+      <h3>Comunicação</h3>
+
+      <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+    </div>
+
+ </main>
+
+<div class="container">
+
+  <div class="col1"> 
+   <img src="imagens/digital/web01.jpg"> 
+   <img src="imagens/digital/web02.jpg">  
+  </div> 
+
+ <div class="col2"> 
+   <img src="imagens/digital/web03.jpg">  
+   <img src="imagens/digital/web04.jpg">   
+ </div>
+
+</div>
+
+<main> 
+
+    <div class="desc"> 
+      <h2>Gabrieli</h2>
+      <h3>Estética</h3>
+
+      <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+    </div>
+
+ </main>
+
+<div class="container">
+
+  <div class="col1"> 
+   <img src="imagens/digital/gabi01.jpg"> 
+   <img src="imagens/digital/gabi02.jpg">  
+  </div> 
+
+ <div class="col2"> 
+   <img src="imagens/digital/gabi03.jpg">  
+   <img src="imagens/digital/gabi04.jpg">   
+ </div>
+
+</div>
+
 
 
  <footer>
