--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
                 <li><a href="#uxdesign"> ux design </a></li>
                 <li><a href="#branding"> branding </a></li>
-                <li><a href="#print"> print </a></li>
                 <li><a href="#digital"> digital </a></li>
-                <li><a href="#study"> study </a></li>
+                <li><a href="#print"> impresso </a></li>
+                <li><a href="#study"> estudos </a></li>
 
 
             </ul>
@@ -114,39 +114,12 @@
 
 
 
-        <article class="first-article clearfix" id="print">
+        <article class="first-article clearfix" id="digital">
 
-            <h1> press </h1>
+            <h1> digital </h1>
             <h2> packages </h2>
             <h3> books </h3>
             <h4> press </h4>
-
-
-            <div class="quadrado-imagem">
-
-                <img src="Imagens/Iglu.png">
-
-            </div>
-
-
-            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
-                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
-                processo de ensino de línguas e UX.
-            </p>
-
-            <button class="button type1"> <a href="press_page.html"> Ver Mais</a></button>
-
-        </article>
-
-
-
-
-        <article class="second-article clearfix" id="digital">
-
-            <h1> digital </h1>
-            <h2> social </h2>
-            <h3> media </h3>
-            <h4> digital </h4>
 
 
             <div class="quadrado-imagem">
@@ -161,7 +134,34 @@
                 processo de ensino de línguas e UX.
             </p>
 
-            <button class="button type1"><a href="digital_page.html">Ver Mais</a></button>
+            <button class="button type1"> <a href="digital_page.html"> Ver Mais</a></button>
+
+        </article>
+
+
+
+
+        <article class="second-article clearfix" id="print">
+
+            <h1> impresso </h1>
+            <h2> social </h2>
+            <h3> media </h3>
+            <h4> digital </h4>
+
+
+            <div class="quadrado-imagem">
+
+                <img src="Imagens/Iglu.png">
+
+            </div>
+
+
+            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
+                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
+                processo de ensino de línguas e UX.
+            </p>
+
+            <button class="button type1"><a href="press_page.html">Ver Mais</a></button>
 
         </article>
 
@@ -169,7 +169,7 @@
 
         <article class="first-article clearfix" id="study">
 
-            <h1> study </h1>
+            <h1> estudos </h1>
             <h2> illustration </h2>
             <h3> typography </h3>
             <h4> design </h4>
