--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <article class="first-article clearfix" id="digital">
 
             <h1> digital </h1>
-            <h2> packages </h2>
-            <h3> books </h3>
+            <h2> social </h2>
+            <h3> media </h3>
             <h4> press </h4>
 
 
@@ -144,9 +144,9 @@
         <article class="second-article clearfix" id="print">
 
             <h1> impresso </h1>
-            <h2> social </h2>
-            <h3> media </h3>
-            <h4> digital </h4>
+            <h2> embalagem </h2>
+            <h3> livros </h3>
+            <h4> print </h4>
 
 
             <div class="quadrado-imagem">
@@ -170,14 +170,14 @@
         <article class="first-article clearfix" id="study">
 
             <h1> estudos </h1>
-            <h2> illustration </h2>
-            <h3> typography </h3>
+            <h2> ilustração </h2>
+            <h3> tipografia </h3>
             <h4> design </h4>
 
 
             <div class="quadrado-imagem">
 
-                <img src="Imagens/Quixotte.svg">
+                <img src="Imagens/estudosimg.png">
 
             </div>
 
