--- a/study_page.html
+++ b/study_page.html
@@ -45,8 +45,8 @@
     <main> 
 
         <div class="desc"> 
-          <h2>Papillon</h2>
-          <h3>Livro</h3>
+          <h2>ilustração</h2>
+          <h3>personagens</h3>
  
           <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
         </div>
@@ -56,13 +56,13 @@
  <div class="container">
  
       <div class="col1"> 
-       <img src="imagens/branding/gonza01.jpg"> 
-       <img src="imagens/branding/gonza03.jpg">  
+       <img src="imagens/estudos/tipo01.jpg"> 
+       <img src="imagens/estudos/des01.jpg">  
       </div> 
  
      <div class="col2"> 
-       <img src="imagens/branding/gonza02.jpg">  
-       <img src="imagens/branding/gonza04.jpg">   
+       <img src="imagens/estudos/des02.jpg">  
+       <img src="imagens/estudos/des03.jpg">   
      </div>
  
  </div>
