--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
             <div class="quadrado-imagem">
 
-                <img src="Imagens/estudosimg.png">
+                <img src="imagens/estudosimg.png">
 
             </div>
 
