--- a/study_page.html
+++ b/study_page.html
@@ -56,16 +56,30 @@
  <div class="container">
  
       <div class="col1"> 
-       <img src="imagens/estudos/tipo01.jpg"> 
-       <img src="imagens/estudos/des01.jpg">  
+       <img src="imagens/estudos/des01.jpg"> 
+       <img src="imagens/estudos/des02.jpg">  
       </div> 
  
      <div class="col2"> 
-       <img src="imagens/estudos/des02.jpg">  
-       <img src="imagens/estudos/des03.jpg">   
+       <img src="imagens/estudos/des03.jpg">  
+       <img src="imagens/estudos/des04.jpg">   
      </div>
- 
+
  </div>
+
+ <div class="container">
+ 
+    <div class="col1"> 
+     <img src="imagens/estudos/des05.jpg"> 
+    </div> 
+
+   <div class="col2"> 
+     <img src="imagens/estudos/des06.jpg">    
+   </div>
+
+
+</div>
+
 
 
  <footer>
