--- a/Branding_page.html
+++ b/Branding_page.html
@@ -53,7 +53,10 @@
          <h2>Gonzalito</h2>
          <h3> Cozinha Mexicana</h3>
 
-         <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+         <p>  Cores quentes e vivas, especiarias, temperos, pimentão verde, amarelo, vermelho, coentro,  salsa,
+           pimenta, panela fumegando cerveja gelada e mesa cheia de amigos. Que alegria! Tudo de bom o que culinária 
+           mexicana pode oferecer refletido em um visule alegre, acolhedor e fácil de se identificar. 
+           Gonzalito é a mistura de tudo de bom que compõe o México e suas iguarias!</p>
        </div>
 
     </main>
@@ -78,7 +81,10 @@
     <h2>Bioma</h2>
     <h3>Consultoria Ambiental</h3>
 
-    <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+    <p>  Onde o zelo pela natureza é o cerne do negócio, a marca Bioma traz a vida em sua identidade. 
+      As misturas e sobreposições entre diferentes tonalidades de verde refletem a fertilização e a garantia de boas 
+      práticas ambientais, a cor marrom simboliza a terra onde tudo cresce. O camaleão muda e age de 
+      acordo com seu meio, a marca Bioma zela por todos os ambientes.</p>
   </div>
 
 </main>
