--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             </div>
 
 
-            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
-                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
+            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira a
+                plataforma <b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
                 processo de ensino de línguas e UX.
             </p>
 
@@ -103,9 +103,9 @@
             </div>
 
 
-            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
-                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
-                processo de ensino de línguas e UX.
+            <p> Crio logos e identidades visuais fortes que refletem a linguagem das empresas, produtos ou serviços.
+                Mergulho de cabeça no universo dos meus clientes para cirar a melhor assinatura e identidade possível.
+                
             </p>
 
             <button class="button type1"> <a href="Branding_page.html"> Ver Mais </a> </button>
@@ -129,9 +129,9 @@
             </div>
 
 
-            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
-                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
-                processo de ensino de línguas e UX.
+            <p> Crio posts profissionais para empresas que querem aumentar a fidelização engajamento nas suas mídias sociais.
+                Uso linguagens e referências que fazem parte do universo do público.
+
             </p>
 
             <button class="button type1"> <a href="digital_page.html"> Ver Mais</a></button>
@@ -151,14 +151,15 @@
 
             <div class="quadrado-imagem">
 
-                <img src="Imagens/Iglu.png">
+                <img src="Imagens/cardapio.png">
 
             </div>
 
 
-            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
-                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
-                processo de ensino de línguas e UX.
+            <p> Crio soluções visuais para outdoors, revistas, panfletos, livros e embalagem.
+                Aplico as melhores práticas de design nos projetos e possuo conhecimento em 
+                processos gráficos que evitarão futuras dores de cabeça.
+
             </p>
 
             <button class="button type1"><a href="press_page.html">Ver Mais</a></button>
@@ -182,9 +183,8 @@
             </div>
 
 
-            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira o
-                projeto<b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
-                processo de ensino de línguas e UX.
+            <p> Sou grande entusiasta do Design como um todo. Aprimoro frequentemente minhas habilidadees
+                com ilustração e tipografia para criar soluções mais marcantes para meus clientes.
             </p>
 
             <button class="button type1"> <a href="study_page.html">Ver Mais</a></button>
@@ -202,15 +202,11 @@
             <img src="Imagens/Logomeunome4.svg">
 
             <h1> Vítor Holtz </h1>
-            <p> t is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                of letters, as opposed to using 'Content here, content here', making it look like readable English. t is
-                a long established fact that a reader will be distracted by the readable content of a page when looking
-                at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
-                letters, as opposed to using 'Content here, content here', making it look like readable English.t is a
-                long established fact that a reader will be distracted by the readable content of a page when looking at
-                its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-                as opposed to using 'Content here, content here', making it look like readable English.</p>
+            <p> Meu nome é Vítor, formado em Publicidade e propaganda pela UNIVALI (Universidade do Vale do Itajaí). 
+                Trabalho com design desde 2011. Procuro cocriar com os usuários em todos os projetos, tento dar as 
+                marcas a cara que procuram. Bebo de fontes variadas, minha inspiração vem não só do digital, mas das 
+                páginas de livros e constante comunicação com as pessoas. Trabalho com <b>Photoshop, Illustrator, 
+                Adobe XD, After Effects e Corel Draw</b>. Possuo conhecimetno nas linguagens <b>HTML, CSS e JavaScript</b></p>
 
             <div class="icons-container">
 
