--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
             <div class="quadrado-imagem">
 
-                <img src="Imagens/cardapio.png">
+                <img src="imagens/cardapio.png">
 
             </div>
 
