--- a/index.html
+++ b/index.html
@@ -191,6 +191,17 @@
 
         </article>
 
+        
+        
+        <div class="sites">
+            <h1> Websites </h1>
+            <a href="http://vitorholtz.github.io/Delacumbre" target="blank"> <img src="imagens/site01.jpg"> </a>
+            <a href="https://vitorholtz.github.io/standart01/" target="blank"> <img src="imagens/site02.jpg"> </a>
+
+        </div>
+
+
+
     </main>
 
     <footer id="footer">
