--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 Trabalho com design desde 2011. Procuro cocriar com os usuários em todos os projetos, tento dar as 
                 marcas a cara que procuram. Bebo de fontes variadas, minha inspiração vem não só do digital, mas das 
                 páginas de livros e constante comunicação com as pessoas. Trabalho com <b>Photoshop, Illustrator, 
-                Adobe XD, After Effects e Corel Draw</b>. Possuo conhecimetno nas linguagens <b>HTML, CSS e JavaScript</b></p>
+                Adobe XD, After Effects e Corel Draw</b>. Possuo conhecimetno nas linguagens <b>HTML e CSS.</b></p>
 
             <div class="icons-container">
 
