--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <h1> Websites </h1>
             <div class="thumbs">
             <a href="http://vitorholtz.github.io/Delacumbre" target="blank"> <img src="imagens/site01.jpg"> </a>
-            <a href="https://vitorholtz.github.io/standart01/" target="blank"> <img src="imagens/site02.jpg"> </a>
+            <a href="https://vitorholtz.github.io/Gonzalito/" target="blank"> <img src="imagens/site02.jpg"> </a>
             </div>
 
         </div>
