--- a/digital_page.html
+++ b/digital_page.html
@@ -48,7 +48,10 @@
           <h2>Livro</h2>
           <h3>Distopia Verídica</h3>
  
-          <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+          <p>  Criei 12 posts para a divulgação do livro <b>“Distopia Verídica”</b>, do escritor catarinense Marcos Holtz. 
+            Fiz parte de todo o projeto e fui responsável pela criação do logo e identidade visual do livro. Também 
+            elaborei os layouts que compõem o início de cada capítulo do livro. Você pode esse e outros trabalhos 
+            impressos <a href="press_page.html">aqui.</a></p>
         </div>
  
      </main>
@@ -73,7 +76,9 @@
       <h2>Papillon</h2>
       <h3>Consulting</h3>
 
-      <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+      <p>  Alimento a página do Instagram da escola de idiomas <b>Papillon Consulting</b> com posts de dicas, explicações e 
+        curiosidades sobre a língua inglesa. Busco trazer um ar dinâmico através de imagens e fontes grandes e centralizadas 
+        para atrair mais atenção dos usuários.</p>
     </div>
 
  </main>
@@ -98,7 +103,7 @@
       <h2>Amorim</h2>
       <h3>Comunicação</h3>
 
-      <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+      <p>Posts para a divulgação da agência Amorim.</p>
     </div>
 
  </main>
@@ -123,7 +128,8 @@
       <h2>Gabrieli</h2>
       <h3>Estética</h3>
 
-      <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+      <p>Posts para a página do Instagram da esteticista <b>Gabrieli Conceição</b>. Procuro seguir 
+        a identidade visual da marca e respeitar os espaços brancos, transmitindo clareza e limpeza.</p>
     </div>
 
  </main>
