--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <h1> digital </h1>
             <h2> social </h2>
             <h3> media </h3>
-            <h4> press </h4>
+            <h4> digital </h4>
 
 
             <div class="quadrado-imagem">
@@ -144,7 +144,7 @@
         <article class="second-article clearfix" id="print">
 
             <h1> impresso </h1>
-            <h2> embalagem </h2>
+            <h2> embalagens </h2>
             <h3> livros </h3>
             <h4> print </h4>
 
