--- a/press_page.html
+++ b/press_page.html
@@ -48,7 +48,10 @@
           <h2>Livro</h2>
           <h3>Distopia Verídica</h3>
  
-          <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+          <p>  Imagens compostas para a abertura dos capítulos do livro<b>“Distopia Verídica”</b>, do escritor catarinense Marcos Holtz. 
+            O livro possui uma temática subversiva sobre a realidade da Coreia do Norte, o layout é composto por texturas pesadas 
+            e uma paleta de cor amarronzada para refletir um cenário sujo e caótico. Participei da direção e arte e elaborei o 
+            material para a divulgação nas mídias sociais. Para ver o restante do trabalho, clique aqui.</p>
         </div>
  
      </main>
