--- a/study_page.html
+++ b/study_page.html
@@ -48,7 +48,10 @@
           <h2>ilustração</h2>
           <h3>personagens</h3>
  
-          <p>  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</p>
+          <p> Crio ilustrações para projetos que requerem mais diversão ou clareza em suas abordagens. 
+            Desenho <a href="https://vitorholtz.github.io/Ux_page#storyboard">Storyboards</a> para esclarecer os usuários sobre a utilidade do produto no dia-a-dia. 
+            Também crio personagens personalizados para marcas que querem trazer o lúdico para seu
+            universo. </p>
         </div>
  
      </main>
