--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
             <div class="thumbs">
             <a href="http://vitorholtz.github.io/Delacumbre" target="blank"> <img src="imagens/site01.jpg"> </a>
             <a href="https://vitorholtz.github.io/Gonzalito/" target="blank"> <img src="imagens/site02.jpg"> </a>
+            <a href="https://vitorholtz.github.io/Gonzalito/" target="blank"> <img src="imagens/site03.jpg"> </a>
             </div>
 
         </div>
