--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira a
                 plataforma <b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
-                processo de ensino de línguas e UX.
+                processo de ensino de línguas e UX. Acesse também a <a href="#websites"> <b>Landing Page</b></a> do projeto.
             </p>
 
             <button class="button type1"> <a href="Ux_page.html"> Ver Mais </a></button>
@@ -193,7 +193,7 @@
 
         
         
-        <div class="sites">
+        <div class="sites" id="websites">
             <h1> Websites </h1>
             <div class="thumbs">
             <a href="http://vitorholtz.github.io/Delacumbre" target="blank"> <img src="imagens/site01.jpg"> </a>
