--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             </div>
 
 
-            <p> Tenho o UX Design como principal abordagem para resolver os problemas de meus clientes. Confira a
-                plataforma <b> Log-book </b>, um projeto de 3 mêses em que pude bortar em prática todo meu conhecimento sobre o
-                processo de ensino de línguas e UX. Acesse também a <a href="#websites"> <b>Landing Page</b></a> do projeto.
+            <p> Tenho o UX Design como principal disciplina para resolver os problemas de meus clientes. Confira a
+                plataforma <b> Log-book </b>, um projeto de 3 mêses em que pude por em prática todo meu conhecimento sobre o
+                processo de ensino de línguas e UX/UI. Acesse também a <a href="#websites"> <b>Landing Page</b></a> do projeto.
             </p>
 
             <button class="button type1"> <a href="Ux_page.html"> Ver Mais </a></button>
