--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
             <p> Tenho o UX Design como principal disciplina para resolver os problemas de meus clientes. Confira a
-                plataforma <b> Log-book </b>, um projeto de 3 mêses em que pude por em prática todo meu conhecimento sobre o
+                plataforma <b> Log-book </b>, um projeto de 3 mêses em que pude pôr em prática todo meu conhecimento sobre o
                 processo de ensino de línguas e UX/UI. Acesse também a <a href="#websites"> <b>Landing Page</b></a> do projeto.
             </p>
 
