--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
 
             <p> Tenho o UX Design como principal disciplina para resolver os problemas de meus clientes. Confira a
-                plataforma <b> Log-book </b>, um projeto de 3 mêses em que pude pôr em prática todo meu conhecimento sobre o
-                processo de ensino de línguas e UX/UI. Acesse também a <a href="#websites"> <b>Landing Page</b></a> do projeto.
+                plataforma <b> Log-book </b>, um projeto de 3 mêses em que pude pôr em prática todo meu conhecimento sobre UX/UI e o
+                processo de ensino de línguas.
             </p>
 
             <button class="button type1"> <a href="Ux_page.html"> Ver Mais </a></button>
@@ -85,6 +85,15 @@
 
 
 
+        <div class="sites" id="websites">
+            <h1> Websites </h1>
+            <div class="thumbs">
+            <a href="http://vitorholtz.github.io/Delacumbre" target="blank"> <img src="imagens/site01.jpg"> </a>
+            <a href="https://vitorholtz.github.io/Gonzalito/" target="blank"> <img src="imagens/site02.jpg"> </a>
+            <a href="https://vitorholtz.github.io/logbook/" target="blank"> <img src="imagens/site03.jpg"> </a>
+            </div>
+
+        </div>
 
 
 
@@ -124,7 +133,7 @@
 
             <div class="quadrado-imagem">
 
-                <img src="Imagens/Desenhos/header01.svg">
+                <img src="Imagens/digitalmedia.svg">
 
             </div>
 
@@ -192,16 +201,7 @@
         </article>
 
         
-        
-        <div class="sites" id="websites">
-            <h1> Websites </h1>
-            <div class="thumbs">
-            <a href="http://vitorholtz.github.io/Delacumbre" target="blank"> <img src="imagens/site01.jpg"> </a>
-            <a href="https://vitorholtz.github.io/Gonzalito/" target="blank"> <img src="imagens/site02.jpg"> </a>
-            <a href="https://vitorholtz.github.io/logbook/" target="blank"> <img src="imagens/site03.jpg"> </a>
-            </div>
 
-        </div>
 
 
 
