--- a/study_page.html
+++ b/study_page.html
@@ -14,11 +14,11 @@
     <header>
 
         <ul>
-          <li> <a href="index.html"> Branding </a> </li> 
-          <li> <a href="index.html"> Press  </a> </li>
+          <li> <a href="ux_page.html"> Ux design </a> </li> 
+          <li> <a href="branding_page.html"> Branding  </a> </li>
           <li> <a class="logocima" href="index.html"> <img src="Imagens/Logo_simbolo.svg"> </a> </li>
-          <li> <a href="index.html"> Digital  </a> </li>
-          <li> <a href="index.html"> Other </a> </li>
+          <li> <a href="digital_page.html"> Digital </a> </li>
+          <li> <a href="press_page.html"> Impresso </a> </li>
         </ul>
 
         <input id="menu-hamburger" type="checkbox"> 
@@ -34,10 +34,10 @@
       <a href="index.html"> <img class="mobilelogo" src="Imagens/Logo_simbolo.svg"> </a>
 
       <ul class="respmenu">
-        <li><a href="index.html"> Branding </a></li>
-        <li><a href="index.html"> Press </a></li>
-        <li><a href="index.html"> Digital </a></li>
-        <li><a href="index.html"> Other </a></li>
+        <li> <a href="ux_page.html"> UX design </a> </li> 
+        <li> <a href="branding_page.html"> Branding  </a> </li>
+        <li> <a href="digital_page.html"> Digital </a> </li>
+        <li> <a href="press_page.html"> Impresso </a> </li>
        </ul>
         
     </header>
