--- a/Branding_page.html
+++ b/Branding_page.html
@@ -14,13 +14,13 @@
 <header>
 
 
-    <ul>
-      <li> <a href="index.html"> Branding </a> </li> 
-      <li> <a href="index.html"> Press  </a> </li>
-      <li> <a class="logocima" href="index.html"> <img src="Imagens/Logo_simbolo.svg"> </a> </li>
-      <li> <a href="index.html"> Digital  </a> </li>
-      <li> <a href="index.html"> Other </a> </li>
-    </ul>
+   <ul>
+    <li> <a href="ux_page.html"> UX design </a> </li> 
+    <li> <a href="digital_page.html"> Digital  </a> </li>
+    <li> <a class="logocima" href="index.html"> <img src="Imagens/Logo_simbolo.svg"> </a> </li>
+    <li> <a href="press_page.html"> Impresso  </a> </li>
+    <li> <a href="study_page.html"> Estudos </a> </li>
+  </ul>
 
    <input id="menu-hamburger" type="checkbox"> 
 
@@ -35,10 +35,10 @@
     <a href="index.html"> <img class="mobilelogo" src="Imagens/Logo_simbolo.svg"> </a>
 
     <ul class="respmenu">
-      <li><a href="index.html"> Branding </a></li>
-      <li><a href="index.html"> Branding </a></li>
-      <li><a href="index.html"> Branding </a></li>
-      <li><a href="index.html"> Branding </a></li>
+      <li> <a href="ux_page.html"> UX design </a> </li> 
+      <li> <a href="digital_page.html"> Digital  </a> </li>
+      <li> <a href="press_page.html"> Impresso  </a> </li>
+      <li> <a href="study_page.html"> Estudos </a> </li>
     </ul>
 
   </label>
