--- a/Ux_page.html
+++ b/Ux_page.html
@@ -17,11 +17,11 @@
           <header>
 
             <ul>
-              <li> <a href="index.html"> Branding </a> </li> 
-              <li> <a href="index.html"> Press  </a> </li>
+              <li> <a href="branding_page.html"> Branding </a> </li> 
+              <li> <a href="digital_page.html"> Digital  </a> </li>
               <li> <a class="logocima" href="index.html"> <img src="Imagens/Logo_simbolo.svg"> </a> </li>
-              <li> <a href="index.html"> Digital  </a> </li>
-              <li> <a href="index.html"> Other </a> </li>
+              <li> <a href="press_page.html"> Impresso  </a> </li>
+              <li> <a href="study_page.html"> Estudos </a> </li>
             </ul>
 
             <input id="menu-hamburger" type="checkbox"> 
@@ -37,10 +37,10 @@
           <a href="index.html"> <img class="mobilelogo" src="Imagens/Logo_simbolo.svg"> </a>
 
           <ul class="respmenu">
-            <li><a href="index.html"> Branding </a></li>
-            <li><a href="index.html"> Press </a></li>
-            <li><a href="index.html"> Digital </a></li>
-            <li><a href="index.html"> Other </a></li>
+            <li> <a href="branding_page.html"> Branding </a> </li> 
+            <li> <a href="digital_page.html"> Digital  </a> </li>
+            <li> <a href="press_page.html"> Impresso  </a> </li>
+            <li> <a href="study_page.html"> Estudos </a> </li>
            </ul>
             
         </header>
