--- a/press_page.html
+++ b/press_page.html
@@ -14,7 +14,7 @@
     <header>
 
         <ul>
-          <li> <a href="ux_page.html"> Ux design </a> </li> 
+          <li> <a href="https://vitorholtz.github.io/Ux_page"> Ux design </a> </li> 
           <li> <a href="branding_page.html"> Branding  </a> </li>
           <li> <a class="logocima" href="index.html"> <img src="Imagens/Logo_simbolo.svg"> </a> </li>
           <li> <a href="digital_page.html"> Digital </a> </li>
@@ -34,7 +34,7 @@
       <a href="index.html"> <img class="mobilelogo" src="Imagens/Logo_simbolo.svg"> </a>
 
       <ul class="respmenu">
-        <li> <a href="ux_page.html"> UX design </a> </li> 
+        <li> <a href="https://vitorholtz.github.io/Ux_page"> UX design </a> </li> 
         <li> <a href="branding_page.html"> Branding  </a> </li>
         <li> <a href="digital_page.html"> Digital </a> </li>
         <li> <a href="study_page.html"> Estudos </a> </li>
