--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
             <div class="quadrado-imagem">
 
-                <img src="Imagens/digitalmedia.svg">
+                <img src="imagens/digitalmedia.svg">
 
             </div>
 
@@ -192,7 +192,7 @@
             </div>
 
 
-            <p> Sou grande entusiasta do Design como um todo. Aprimoro frequentemente minhas habilidadees
+            <p> Sou grande entusiasta do design como um todo. Aprimoro frequentemente minhas habilidadees
                 com ilustração e tipografia para criar soluções mais marcantes para meus clientes.
             </p>
 
