--- a/Branding_page.html
+++ b/Branding_page.html
@@ -15,7 +15,7 @@
 
 
    <ul>
-    <li> <a href="https://vitorholtz.github.io/Ux_page"> UX design </a> </li> 
+    <li> <a href="index.html"> UX design </a> </li> 
     <li> <a href="digital_page.html"> Digital  </a> </li>
     <li> <a class="logocima" href="index.html"> <img src="Imagens/Logo_simbolo.svg"> </a> </li>
     <li> <a href="press_page.html"> Impresso  </a> </li>
@@ -35,7 +35,7 @@
     <a href="index.html"> <img class="mobilelogo" src="Imagens/Logo_simbolo.svg"> </a>
 
     <ul class="respmenu">
-      <li> <a href="https://vitorholtz.github.io/Ux_page"> UX design </a> </li> 
+      <li> <a href="index.html"> UX design </a> </li> 
       <li> <a href="digital_page.html"> Digital  </a> </li>
       <li> <a href="press_page.html"> Impresso  </a> </li>
       <li> <a href="study_page.html"> Estudos </a> </li>
