--- a/digital_page.html
+++ b/digital_page.html
@@ -15,7 +15,7 @@
 
         <ul>
           <li> <a href="ux_page.html"> Ux design </a> </li> 
-          <li> <a href="branding_page.html"> Branding  </a> </li>
+          <li> <a href="Branding_page.html"> Branding  </a> </li>
           <li> <a class="logocima" href="index.html"> <img src="Imagens/Logo_simbolo.svg"> </a> </li>
           <li> <a href="press_page.html"> Impresso  </a> </li>
           <li> <a href="study_page.html"> Estudos </a> </li>
@@ -35,9 +35,9 @@
 
       <ul class="respmenu">
         <li> <a href="ux_page.html"> UX design </a> </li> 
-        <li> <a href="branding_page.html"> Branding  </a> </li>
+        <li> <a href="Branding_page.html"> Branding  </a> </li>
         <li> <a href="press_page.html"> Impresso  </a> </li>
-        <li> <a href="study_page.html"> Outros </a> </li>
+        <li> <a href="study_page.html"> Estudos </a> </li>
        </ul>
         
     </header>
