--- a/press_page.html
+++ b/press_page.html
@@ -15,7 +15,7 @@
 
         <ul>
           <li> <a href="https://vitorholtz.github.io/Ux_page"> Ux design </a> </li> 
-          <li> <a href="branding_page.html"> Branding  </a> </li>
+          <li> <a href="Branding_page.html"> Branding  </a> </li>
           <li> <a class="logocima" href="index.html"> <img src="Imagens/Logo_simbolo.svg"> </a> </li>
           <li> <a href="digital_page.html"> Digital </a> </li>
           <li> <a href="study_page.html"> Estudos </a> </li>
@@ -35,7 +35,7 @@
 
       <ul class="respmenu">
         <li> <a href="https://vitorholtz.github.io/Ux_page"> UX design </a> </li> 
-        <li> <a href="branding_page.html"> Branding  </a> </li>
+        <li> <a href="Branding_page.html"> Branding  </a> </li>
         <li> <a href="digital_page.html"> Digital </a> </li>
         <li> <a href="study_page.html"> Estudos </a> </li>
        </ul>
