--- a/Branding_page.html
+++ b/Branding_page.html
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/804d37bdbe.js" crossorigin="anonymous"></script>
+  <script src="ux_script.js"></script>
 
 </head>
 
@@ -46,6 +47,8 @@
   
 
 </header>
+
+<a class="stickhome" href="#top"> <img id="stickhome_img" src="Imagens/Up_icon.png"> </a>
 
     <main> 
 
