--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
 
 
-            <p> Tenho o UX Design como principal disciplina para resolver os problemas de meus clientes. Confira a
+            <p> Tenho o UX Design como principal disciplina para resolver os problemas dos meus clientes. Confira a
                 plataforma <b> Log-book </b>, um projeto de 3 mêses em que pude pôr em prática todo meu conhecimento sobre UX/UI e o
                 processo de ensino de línguas.
             </p>
